force-app/main/default/objects/Demographic_DMO__dlm/fields/annual_growth_rate_pct__c.field-meta.xml
<CustomField>
    <fullName>annual_growth_rate_pct__c</fullName>
    <label>annual_growth_rate_pct</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>annual_growth_rate_pct</labelOverride>
        <masterLabel>annual_growth_rate_pct</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>