force-app/main/default/objects/Demographic_DMO__dlm/fields/median_household_income_inr__c.field-meta.xml
<CustomField>
    <fullName>median_household_income_inr__c</fullName>
    <label>median_household_income_inr</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>median_household_income_inr</labelOverride>
        <masterLabel>median_household_income_inr</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>