force-app/main/default/objects/Demographic_DMO__dlm/fields/population_density_per_sqkm__c.field-meta.xml
<CustomField>
    <fullName>population_density_per_sqkm__c</fullName>
    <label>population_density_per_sqkm</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>population_density_per_sqkm</labelOverride>
        <masterLabel>population_density_per_sqkm</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>