force-app/main/default/objects/Demographic_DMO__dlm/fields/purchasing_power_index__c.field-meta.xml
<CustomField>
    <fullName>purchasing_power_index__c</fullName>
    <label>purchasing_power_index</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>purchasing_power_index</labelOverride>
        <masterLabel>purchasing_power_index</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>